remove non ascii characters

--- a/package/batocera/emulationstation/batocera-es-system/locales/es/batocera-es-system.po
+++ b/package/batocera/emulationstation/batocera-es-system/locales/es/batocera-es-system.po
@@ -78,7 +78,7 @@ msgctxt "game_options"
 msgid "SHADER SET"
 msgstr "EFECTOS DE PANTALLA (SHADERS)"
 
-#. TRANSLATION: shared, shared, shared
+#. TRANSLATION: shared, shared, shared, awgl
 msgctxt "game_options"
 msgid "GAME RENDERING"
 msgstr ""
@@ -4088,7 +4088,7 @@ msgctxt "game_options"
 msgid "Help games which are too quick or that have bugs."
 msgstr "Ayuda a juegos que son demasiado rápidos o que tienen errores."
 
-#. TRANSLATION: libretro/puae, duckstation, flycast, openbor
+#. TRANSLATION: libretro/puae, duckstation, flycast, openbor, awgl
 msgctxt "game_options"
 msgid "Normal"
 msgstr "Normal"
@@ -4244,16 +4244,6 @@ msgstr "Afecta la velocidad del mouse a nivel global."
 
 #. TRANSLATION: libretro/puae, libretro/puae
 msgctxt "game_options"
-msgid "JUMP ON B"
-msgstr "SALTO EN B"
-
-#. TRANSLATION: libretro/puae, libretro/puae, libretro/vice_x64, libretro/vice_x64sc
-msgctxt "game_options"
-msgid "Makes second fire button press up instead."
-msgstr "Habilita el segundo botón en su lugar."
-
-#. TRANSLATION: libretro/puae, libretro/puae
-msgctxt "game_options"
 msgid "FLOPPY TURBO SPEED"
 msgstr "FLOPPY TURBO SPEED"
 
@@ -4291,6 +4281,16 @@ msgstr "DESACTIVAR JOYSTICK DEL EMULADOR"
 msgctxt "game_options"
 msgid "Passes all physical keyboard events for Pad2Key."
 msgstr "Pasa todos los eventos de teclado físico para Pad2Key."
+
+#. TRANSLATION: libretro/puae, libretro/puae, libretro/puae, libretro/vice_x64, libretro/vice_x64sc
+msgctxt "game_options"
+msgid "JUMP ON A"
+msgstr "SALTO EN A"
+
+#. TRANSLATION: libretro/puae, libretro/puae, libretro/vice_x64, libretro/vice_x64sc
+msgctxt "game_options"
+msgid "Makes second fire button press up instead."
+msgstr "Habilita el segundo botón en su lugar."
 
 #. TRANSLATION: libretro/puae, libretro/puae
 msgctxt "game_options"
@@ -4353,11 +4353,6 @@ msgstr ""
 msgctxt "game_options"
 msgid "CD TURBO SPEED"
 msgstr "CD TURBO SPEED"
-
-#. TRANSLATION: libretro/puae, libretro/vice_x64, libretro/vice_x64sc
-msgctxt "game_options"
-msgid "JUMP ON A"
-msgstr "SALTO EN A"
 
 #. TRANSLATION: libretro/puae
 msgctxt "game_options"
@@ -5761,7 +5756,7 @@ msgid "Not all games support Stretch, depending on the video files."
 msgstr ""
 "No todos los juegos admiten estiramiento, depende de los archivos de video."
 
-#. TRANSLATION: daphne
+#. TRANSLATION: daphne, awgl, awgl
 msgctxt "game_options"
 msgid "Original"
 msgstr "Original"
@@ -6329,7 +6324,7 @@ msgctxt "game_options"
 msgid "Japanese"
 msgstr "Japonés"
 
-#. TRANSLATION: flycast/wasm4, sonic2013, soniccd
+#. TRANSLATION: flycast/wasm4, sonic2013, soniccd, awgl
 msgctxt "game_options"
 msgid "English"
 msgstr "Inglés"
@@ -6634,7 +6629,7 @@ msgctxt "game_options"
 msgid "Simple 2x"
 msgstr "Simple 2x"
 
-#. TRANSLATION: pcsx2
+#. TRANSLATION: pcsx2, awgl
 msgctxt "game_options"
 msgid "Software"
 msgstr "Software"
@@ -7963,6 +7958,110 @@ msgid ""
 msgstr ""
 "Lea el mouse a través de Rawinput, lo que permite 2 mouse para juegos de "
 "disparos de 2 jugadores."
+
+#. TRANSLATION: awgl
+msgctxt "game_options"
+msgid "GAME DIFFICULTY"
+msgstr ""
+
+#. TRANSLATION: awgl
+msgctxt "game_options"
+msgid "Select game difficulty."
+msgstr ""
+
+#. TRANSLATION: awgl
+msgctxt "game_options"
+msgid "Easy"
+msgstr ""
+
+#. TRANSLATION: awgl
+msgctxt "game_options"
+msgid "Hard"
+msgstr ""
+
+#. TRANSLATION: awgl
+msgctxt "game_options"
+msgid "GAME LANGUAGE"
+msgstr ""
+
+#. TRANSLATION: awgl
+msgctxt "game_options"
+msgid "Select game language."
+msgstr ""
+
+#. TRANSLATION: awgl
+msgctxt "game_options"
+msgid "Francais"
+msgstr ""
+
+#. TRANSLATION: awgl
+msgctxt "game_options"
+msgid "Deutsch"
+msgstr ""
+
+#. TRANSLATION: awgl
+msgctxt "game_options"
+msgid "Espanol"
+msgstr ""
+
+#. TRANSLATION: awgl
+msgctxt "game_options"
+msgid "Italiano"
+msgstr ""
+
+#. TRANSLATION: awgl
+msgctxt "game_options"
+msgid "Select rendering mode."
+msgstr ""
+
+#. TRANSLATION: awgl
+msgctxt "game_options"
+msgid "FULLSCREEN MODE"
+msgstr ""
+
+#. TRANSLATION: awgl
+msgctxt "game_options"
+msgid "Select fullscreen mode."
+msgstr ""
+
+#. TRANSLATION: awgl
+msgctxt "game_options"
+msgid "Stretched (640x480)"
+msgstr ""
+
+#. TRANSLATION: awgl
+msgctxt "game_options"
+msgid "Widescreen (16:10)"
+msgstr ""
+
+#. TRANSLATION: awgl
+msgctxt "game_options"
+msgid "SOUND EFFECTS MODE"
+msgstr ""
+
+#. TRANSLATION: awgl
+msgctxt "game_options"
+msgid "Select sound effects mode."
+msgstr ""
+
+#. TRANSLATION: awgl
+msgctxt "game_options"
+msgid "Remastered"
+msgstr ""
+
+#. TRANSLATION: awgl
+msgctxt "game_options"
+msgid "EGA GRAPHICS MODE"
+msgstr ""
+
+#. TRANSLATION: awgl
+msgctxt "game_options"
+msgid "Simulate the EGA graphics mode (works only with DOS version)."
+msgstr ""
+
+#~ msgctxt "game_options"
+#~ msgid "JUMP ON B"
+#~ msgstr "SALTO EN B"
 
 #~ msgctxt "game_options"
 #~ msgid ""
