--- a/package/batocera/emulationstation/batocera-es-system/locales/nl/batocera-es-system.po
+++ b/package/batocera/emulationstation/batocera-es-system/locales/nl/batocera-es-system.po
@@ -73,7 +73,7 @@ msgctxt "game_options"
 msgid "SHADER SET"
 msgstr ""
 
-#. TRANSLATION: shared, shared, shared
+#. TRANSLATION: shared, shared, shared, awgl
 msgctxt "game_options"
 msgid "GAME RENDERING"
 msgstr ""
@@ -4061,7 +4061,7 @@ msgctxt "game_options"
 msgid "Help games which are too quick or that have bugs."
 msgstr "Ondersteun spellen die te snel zijn of bugs hebben."
 
-#. TRANSLATION: libretro/puae, duckstation, flycast, openbor
+#. TRANSLATION: libretro/puae, duckstation, flycast, openbor, awgl
 msgctxt "game_options"
 msgid "Normal"
 msgstr "Normaal"
@@ -4219,16 +4219,6 @@ msgstr "Beïnvloed muis snelheid globaal."
 
 #. TRANSLATION: libretro/puae, libretro/puae
 msgctxt "game_options"
-msgid "JUMP ON B"
-msgstr "SPRING OP B"
-
-#. TRANSLATION: libretro/puae, libretro/puae, libretro/vice_x64, libretro/vice_x64sc
-msgctxt "game_options"
-msgid "Makes second fire button press up instead."
-msgstr "Zorgt dat de tweede vuur knop wijzigt naar omhoog drukken."
-
-#. TRANSLATION: libretro/puae, libretro/puae
-msgctxt "game_options"
 msgid "FLOPPY TURBO SPEED"
 msgstr "FLOPPY TURBO SNELHEID"
 
@@ -4266,6 +4256,16 @@ msgstr "EMULATOR JOYSTICK UITSCHAKELEN"
 msgctxt "game_options"
 msgid "Passes all physical keyboard events for Pad2Key."
 msgstr "Laat alle fysieke keyboard gebeurtenissen door naar Pad2Key."
+
+#. TRANSLATION: libretro/puae, libretro/puae, libretro/puae, libretro/vice_x64, libretro/vice_x64sc
+msgctxt "game_options"
+msgid "JUMP ON A"
+msgstr "SPRING OP A"
+
+#. TRANSLATION: libretro/puae, libretro/puae, libretro/vice_x64, libretro/vice_x64sc
+msgctxt "game_options"
+msgid "Makes second fire button press up instead."
+msgstr "Zorgt dat de tweede vuur knop wijzigt naar omhoog drukken."
 
 #. TRANSLATION: libretro/puae, libretro/puae
 msgctxt "game_options"
@@ -4326,11 +4326,6 @@ msgstr "Voert CD in gedurende boot animatie om laadfouten te voorkomen."
 msgctxt "game_options"
 msgid "CD TURBO SPEED"
 msgstr "CD TURBO SNELHEID"
-
-#. TRANSLATION: libretro/puae, libretro/vice_x64, libretro/vice_x64sc
-msgctxt "game_options"
-msgid "JUMP ON A"
-msgstr "SPRING OP A"
 
 #. TRANSLATION: libretro/puae
 msgctxt "game_options"
@@ -5731,7 +5726,7 @@ msgctxt "game_options"
 msgid "Not all games support Stretch, depending on the video files."
 msgstr ""
 
-#. TRANSLATION: daphne
+#. TRANSLATION: daphne, awgl, awgl
 msgctxt "game_options"
 msgid "Original"
 msgstr ""
@@ -6308,7 +6303,7 @@ msgctxt "game_options"
 msgid "Japanese"
 msgstr "Japans"
 
-#. TRANSLATION: flycast/wasm4, sonic2013, soniccd
+#. TRANSLATION: flycast/wasm4, sonic2013, soniccd, awgl
 msgctxt "game_options"
 msgid "English"
 msgstr "Engels"
@@ -6614,7 +6609,7 @@ msgctxt "game_options"
 msgid "Simple 2x"
 msgstr "Simpel 2x"
 
-#. TRANSLATION: pcsx2
+#. TRANSLATION: pcsx2, awgl
 msgctxt "game_options"
 msgid "Software"
 msgstr "Software"
@@ -7958,6 +7953,110 @@ msgid ""
 "Read mouse through Rawinput, allowing 2 mice for 2 player shooting games."
 msgstr ""
 "Less muis door Rawinput, laat 2 muizen toe voor 2 speler schiet spellen."
+
+#. TRANSLATION: awgl
+msgctxt "game_options"
+msgid "GAME DIFFICULTY"
+msgstr ""
+
+#. TRANSLATION: awgl
+msgctxt "game_options"
+msgid "Select game difficulty."
+msgstr ""
+
+#. TRANSLATION: awgl
+msgctxt "game_options"
+msgid "Easy"
+msgstr ""
+
+#. TRANSLATION: awgl
+msgctxt "game_options"
+msgid "Hard"
+msgstr ""
+
+#. TRANSLATION: awgl
+msgctxt "game_options"
+msgid "GAME LANGUAGE"
+msgstr ""
+
+#. TRANSLATION: awgl
+msgctxt "game_options"
+msgid "Select game language."
+msgstr ""
+
+#. TRANSLATION: awgl
+msgctxt "game_options"
+msgid "Francais"
+msgstr ""
+
+#. TRANSLATION: awgl
+msgctxt "game_options"
+msgid "Deutsch"
+msgstr ""
+
+#. TRANSLATION: awgl
+msgctxt "game_options"
+msgid "Espanol"
+msgstr ""
+
+#. TRANSLATION: awgl
+msgctxt "game_options"
+msgid "Italiano"
+msgstr ""
+
+#. TRANSLATION: awgl
+msgctxt "game_options"
+msgid "Select rendering mode."
+msgstr ""
+
+#. TRANSLATION: awgl
+msgctxt "game_options"
+msgid "FULLSCREEN MODE"
+msgstr ""
+
+#. TRANSLATION: awgl
+msgctxt "game_options"
+msgid "Select fullscreen mode."
+msgstr ""
+
+#. TRANSLATION: awgl
+msgctxt "game_options"
+msgid "Stretched (640x480)"
+msgstr ""
+
+#. TRANSLATION: awgl
+msgctxt "game_options"
+msgid "Widescreen (16:10)"
+msgstr ""
+
+#. TRANSLATION: awgl
+msgctxt "game_options"
+msgid "SOUND EFFECTS MODE"
+msgstr ""
+
+#. TRANSLATION: awgl
+msgctxt "game_options"
+msgid "Select sound effects mode."
+msgstr ""
+
+#. TRANSLATION: awgl
+msgctxt "game_options"
+msgid "Remastered"
+msgstr ""
+
+#. TRANSLATION: awgl
+msgctxt "game_options"
+msgid "EGA GRAPHICS MODE"
+msgstr ""
+
+#. TRANSLATION: awgl
+msgctxt "game_options"
+msgid "Simulate the EGA graphics mode (works only with DOS version)."
+msgstr ""
+
+#~ msgctxt "game_options"
+#~ msgid "JUMP ON B"
+#~ msgstr "SPRING OP B"
 
 #~ msgctxt "game_options"
 #~ msgid "CUSTOM TEXTURES"
