--- a/package/batocera/emulationstation/batocera-es-system/locales/batocera-es-system.pot
+++ b/package/batocera/emulationstation/batocera-es-system/locales/batocera-es-system.pot
@@ -76,7 +76,7 @@ msgctxt "game_options"
 msgid "SHADER SET"
 msgstr ""
 
-#. TRANSLATION: shared, shared, shared
+#. TRANSLATION: shared, shared, shared, awgl
 msgctxt "game_options"
 msgid "GAME RENDERING"
 msgstr ""
@@ -4043,7 +4043,7 @@ msgctxt "game_options"
 msgid "Help games which are too quick or that have bugs."
 msgstr ""
 
-#. TRANSLATION: libretro/puae, duckstation, flycast, openbor
+#. TRANSLATION: libretro/puae, duckstation, flycast, openbor, awgl
 msgctxt "game_options"
 msgid "Normal"
 msgstr ""
@@ -4197,16 +4197,6 @@ msgstr ""
 
 #. TRANSLATION: libretro/puae, libretro/puae
 msgctxt "game_options"
-msgid "JUMP ON B"
-msgstr ""
-
-#. TRANSLATION: libretro/puae, libretro/puae, libretro/vice_x64, libretro/vice_x64sc
-msgctxt "game_options"
-msgid "Makes second fire button press up instead."
-msgstr ""
-
-#. TRANSLATION: libretro/puae, libretro/puae
-msgctxt "game_options"
 msgid "FLOPPY TURBO SPEED"
 msgstr ""
 
@@ -4243,6 +4233,16 @@ msgstr ""
 #. TRANSLATION: libretro/puae, libretro/puae
 msgctxt "game_options"
 msgid "Passes all physical keyboard events for Pad2Key."
+msgstr ""
+
+#. TRANSLATION: libretro/puae, libretro/puae, libretro/puae, libretro/vice_x64, libretro/vice_x64sc
+msgctxt "game_options"
+msgid "JUMP ON A"
+msgstr ""
+
+#. TRANSLATION: libretro/puae, libretro/puae, libretro/vice_x64, libretro/vice_x64sc
+msgctxt "game_options"
+msgid "Makes second fire button press up instead."
 msgstr ""
 
 #. TRANSLATION: libretro/puae, libretro/puae
@@ -4303,11 +4303,6 @@ msgstr ""
 #. TRANSLATION: libretro/puae, libretro/puae
 msgctxt "game_options"
 msgid "CD TURBO SPEED"
-msgstr ""
-
-#. TRANSLATION: libretro/puae, libretro/vice_x64, libretro/vice_x64sc
-msgctxt "game_options"
-msgid "JUMP ON A"
 msgstr ""
 
 #. TRANSLATION: libretro/puae
@@ -5698,7 +5693,7 @@ msgctxt "game_options"
 msgid "Not all games support Stretch, depending on the video files."
 msgstr ""
 
-#. TRANSLATION: daphne
+#. TRANSLATION: daphne, awgl, awgl
 msgctxt "game_options"
 msgid "Original"
 msgstr ""
@@ -6266,7 +6261,7 @@ msgctxt "game_options"
 msgid "Japanese"
 msgstr ""
 
-#. TRANSLATION: flycast/wasm4, sonic2013, soniccd
+#. TRANSLATION: flycast/wasm4, sonic2013, soniccd, awgl
 msgctxt "game_options"
 msgid "English"
 msgstr ""
@@ -6568,7 +6563,7 @@ msgctxt "game_options"
 msgid "Simple 2x"
 msgstr ""
 
-#. TRANSLATION: pcsx2
+#. TRANSLATION: pcsx2, awgl
 msgctxt "game_options"
 msgid "Software"
 msgstr ""
@@ -7879,4 +7874,104 @@ msgstr ""
 msgctxt "game_options"
 msgid ""
 "Read mouse through Rawinput, allowing 2 mice for 2 player shooting games."
+msgstr ""
+
+#. TRANSLATION: awgl
+msgctxt "game_options"
+msgid "GAME DIFFICULTY"
+msgstr ""
+
+#. TRANSLATION: awgl
+msgctxt "game_options"
+msgid "Select game difficulty."
+msgstr ""
+
+#. TRANSLATION: awgl
+msgctxt "game_options"
+msgid "Easy"
+msgstr ""
+
+#. TRANSLATION: awgl
+msgctxt "game_options"
+msgid "Hard"
+msgstr ""
+
+#. TRANSLATION: awgl
+msgctxt "game_options"
+msgid "GAME LANGUAGE"
+msgstr ""
+
+#. TRANSLATION: awgl
+msgctxt "game_options"
+msgid "Select game language."
+msgstr ""
+
+#. TRANSLATION: awgl
+msgctxt "game_options"
+msgid "Francais"
+msgstr ""
+
+#. TRANSLATION: awgl
+msgctxt "game_options"
+msgid "Deutsch"
+msgstr ""
+
+#. TRANSLATION: awgl
+msgctxt "game_options"
+msgid "Espanol"
+msgstr ""
+
+#. TRANSLATION: awgl
+msgctxt "game_options"
+msgid "Italiano"
+msgstr ""
+
+#. TRANSLATION: awgl
+msgctxt "game_options"
+msgid "Select rendering mode."
+msgstr ""
+
+#. TRANSLATION: awgl
+msgctxt "game_options"
+msgid "FULLSCREEN MODE"
+msgstr ""
+
+#. TRANSLATION: awgl
+msgctxt "game_options"
+msgid "Select fullscreen mode."
+msgstr ""
+
+#. TRANSLATION: awgl
+msgctxt "game_options"
+msgid "Stretched (640x480)"
+msgstr ""
+
+#. TRANSLATION: awgl
+msgctxt "game_options"
+msgid "Widescreen (16:10)"
+msgstr ""
+
+#. TRANSLATION: awgl
+msgctxt "game_options"
+msgid "SOUND EFFECTS MODE"
+msgstr ""
+
+#. TRANSLATION: awgl
+msgctxt "game_options"
+msgid "Select sound effects mode."
+msgstr ""
+
+#. TRANSLATION: awgl
+msgctxt "game_options"
+msgid "Remastered"
+msgstr ""
+
+#. TRANSLATION: awgl
+msgctxt "game_options"
+msgid "EGA GRAPHICS MODE"
+msgstr ""
+
+#. TRANSLATION: awgl
+msgctxt "game_options"
+msgid "Simulate the EGA graphics mode (works only with DOS version)."
 msgstr ""
