--- a/package/batocera/emulationstation/batocera-es-system/locales/pt_BR/batocera-es-system.po
+++ b/package/batocera/emulationstation/batocera-es-system/locales/pt_BR/batocera-es-system.po
@@ -78,7 +78,7 @@ msgctxt "game_options"
 msgid "SHADER SET"
 msgstr "CONJUNTO DE SOMBREAMENTO"
 
-#. TRANSLATION: shared, shared, shared
+#. TRANSLATION: shared, shared, shared, awgl
 msgctxt "game_options"
 msgid "GAME RENDERING"
 msgstr "RENDERIZAÇÃO DO JOGO"
@@ -4092,7 +4092,7 @@ msgctxt "game_options"
 msgid "Help games which are too quick or that have bugs."
 msgstr "Ajuda jogos que são muito rápidos ou que possuem defeitos."
 
-#. TRANSLATION: libretro/puae, duckstation, flycast, openbor
+#. TRANSLATION: libretro/puae, duckstation, flycast, openbor, awgl
 msgctxt "game_options"
 msgid "Normal"
 msgstr "Normal"
@@ -4248,16 +4248,6 @@ msgstr "Afeta a velocidade do mouse globalmente."
 
 #. TRANSLATION: libretro/puae, libretro/puae
 msgctxt "game_options"
-msgid "JUMP ON B"
-msgstr "SALTE EM B"
-
-#. TRANSLATION: libretro/puae, libretro/puae, libretro/vice_x64, libretro/vice_x64sc
-msgctxt "game_options"
-msgid "Makes second fire button press up instead."
-msgstr "Faz o segundo botão de disparo ser pressionado como alternativa."
-
-#. TRANSLATION: libretro/puae, libretro/puae
-msgctxt "game_options"
 msgid "FLOPPY TURBO SPEED"
 msgstr "VELOCIDADE TURBO PARA O DISQUELE FLEXÍVEL"
 
@@ -4298,6 +4288,16 @@ msgstr "DESATIVAR CONTROLE DO EMULADOR"
 msgctxt "game_options"
 msgid "Passes all physical keyboard events for Pad2Key."
 msgstr "Passa todos os eventos de teclado físico para Pad2Key."
+
+#. TRANSLATION: libretro/puae, libretro/puae, libretro/puae, libretro/vice_x64, libretro/vice_x64sc
+msgctxt "game_options"
+msgid "JUMP ON A"
+msgstr "SALTE NO A"
+
+#. TRANSLATION: libretro/puae, libretro/puae, libretro/vice_x64, libretro/vice_x64sc
+msgctxt "game_options"
+msgid "Makes second fire button press up instead."
+msgstr "Faz o segundo botão de disparo ser pressionado como alternativa."
 
 #. TRANSLATION: libretro/puae, libretro/puae
 msgctxt "game_options"
@@ -4360,11 +4360,6 @@ msgstr ""
 msgctxt "game_options"
 msgid "CD TURBO SPEED"
 msgstr "VELOCIDADE DE CD EM MODO TURBO"
-
-#. TRANSLATION: libretro/puae, libretro/vice_x64, libretro/vice_x64sc
-msgctxt "game_options"
-msgid "JUMP ON A"
-msgstr "SALTE NO A"
 
 #. TRANSLATION: libretro/puae
 msgctxt "game_options"
@@ -5770,7 +5765,7 @@ msgstr ""
 "Nem todos os jogos suportam a proporção Esticado, dependem dos arquivos de "
 "vídeo."
 
-#. TRANSLATION: daphne
+#. TRANSLATION: daphne, awgl, awgl
 msgctxt "game_options"
 msgid "Original"
 msgstr "Original"
@@ -6352,7 +6347,7 @@ msgctxt "game_options"
 msgid "Japanese"
 msgstr "Japonês"
 
-#. TRANSLATION: flycast/wasm4, sonic2013, soniccd
+#. TRANSLATION: flycast/wasm4, sonic2013, soniccd, awgl
 msgctxt "game_options"
 msgid "English"
 msgstr "Inglês"
@@ -6656,7 +6651,7 @@ msgctxt "game_options"
 msgid "Simple 2x"
 msgstr "Simples 2x"
 
-#. TRANSLATION: pcsx2
+#. TRANSLATION: pcsx2, awgl
 msgctxt "game_options"
 msgid "Software"
 msgstr "Software"
@@ -8018,6 +8013,110 @@ msgid ""
 msgstr ""
 "Lê o mouse através da entrada bruta, permitindo 2 mouses para jogos de tiro "
 "com 2 jogadores."
+
+#. TRANSLATION: awgl
+msgctxt "game_options"
+msgid "GAME DIFFICULTY"
+msgstr ""
+
+#. TRANSLATION: awgl
+msgctxt "game_options"
+msgid "Select game difficulty."
+msgstr ""
+
+#. TRANSLATION: awgl
+msgctxt "game_options"
+msgid "Easy"
+msgstr ""
+
+#. TRANSLATION: awgl
+msgctxt "game_options"
+msgid "Hard"
+msgstr ""
+
+#. TRANSLATION: awgl
+msgctxt "game_options"
+msgid "GAME LANGUAGE"
+msgstr ""
+
+#. TRANSLATION: awgl
+msgctxt "game_options"
+msgid "Select game language."
+msgstr ""
+
+#. TRANSLATION: awgl
+msgctxt "game_options"
+msgid "Francais"
+msgstr ""
+
+#. TRANSLATION: awgl
+msgctxt "game_options"
+msgid "Deutsch"
+msgstr ""
+
+#. TRANSLATION: awgl
+msgctxt "game_options"
+msgid "Espanol"
+msgstr ""
+
+#. TRANSLATION: awgl
+msgctxt "game_options"
+msgid "Italiano"
+msgstr ""
+
+#. TRANSLATION: awgl
+msgctxt "game_options"
+msgid "Select rendering mode."
+msgstr ""
+
+#. TRANSLATION: awgl
+msgctxt "game_options"
+msgid "FULLSCREEN MODE"
+msgstr ""
+
+#. TRANSLATION: awgl
+msgctxt "game_options"
+msgid "Select fullscreen mode."
+msgstr ""
+
+#. TRANSLATION: awgl
+msgctxt "game_options"
+msgid "Stretched (640x480)"
+msgstr ""
+
+#. TRANSLATION: awgl
+msgctxt "game_options"
+msgid "Widescreen (16:10)"
+msgstr ""
+
+#. TRANSLATION: awgl
+msgctxt "game_options"
+msgid "SOUND EFFECTS MODE"
+msgstr ""
+
+#. TRANSLATION: awgl
+msgctxt "game_options"
+msgid "Select sound effects mode."
+msgstr ""
+
+#. TRANSLATION: awgl
+msgctxt "game_options"
+msgid "Remastered"
+msgstr ""
+
+#. TRANSLATION: awgl
+msgctxt "game_options"
+msgid "EGA GRAPHICS MODE"
+msgstr ""
+
+#. TRANSLATION: awgl
+msgctxt "game_options"
+msgid "Simulate the EGA graphics mode (works only with DOS version)."
+msgstr ""
+
+#~ msgctxt "game_options"
+#~ msgid "JUMP ON B"
+#~ msgstr "SALTE EM B"
 
 #~ msgctxt "game_options"
 #~ msgid ""
