--- a/package/batocera/emulationstation/batocera-es-system/locales/en_GB/batocera-es-system.po
+++ b/package/batocera/emulationstation/batocera-es-system/locales/en_GB/batocera-es-system.po
@@ -4360,6 +4360,11 @@ msgstr ""
 
 #. TRANSLATION: libretro/puae
 msgctxt "game_options"
+msgid "Modern Alternative"
+msgstr ""
+
+#. TRANSLATION: libretro/puae
+msgctxt "game_options"
 msgid "Inserts CD during boot animation to prevent loading fail."
 msgstr ""
 
@@ -7465,6 +7470,42 @@ msgstr ""
 #. TRANSLATION: rpcs3
 msgctxt "game_options"
 msgid "STRETCH TO DISPLAY AREA"
+msgstr ""
+
+#. TRANSLATION: rpcs3
+msgctxt "game_options"
+msgid "Can Fix broken graphics in some games."
+msgstr ""
+
+#. TRANSLATION: rpcs3
+msgctxt "game_options"
+msgid "WRITE DEPTH BUFFER"
+msgstr ""
+
+#. TRANSLATION: rpcs3
+msgctxt "game_options"
+msgid "May help to fix choppy audio on weaker CPUs."
+msgstr ""
+
+#. TRANSLATION: rpcs3
+msgctxt "game_options"
+msgid "PREFERRED SPU THREADS"
+msgstr ""
+
+#. TRANSLATION: rpcs3
+msgctxt "game_options"
+msgid "0 (Default)"
+msgstr ""
+
+#. TRANSLATION: rpcs3
+msgctxt "game_options"
+msgid ""
+"Enable this option if you get missing graphics or broken lighting ingame."
+msgstr ""
+
+#. TRANSLATION: rpcs3
+msgctxt "game_options"
+msgid "WRITE COLOUR BUFFERS"
 msgstr ""
 
 #. TRANSLATION: easyrpg
