--- a/package/batocera/emulationstation/batocera-es-system/locales/fr/batocera-es-system.po
+++ b/package/batocera/emulationstation/batocera-es-system/locales/fr/batocera-es-system.po
@@ -531,22 +531,22 @@ msgctxt "game_options"
 msgid "OVERCLOCK (UNSTABLE)"
 msgstr "OVERCLOCK (INSTABLE)"
 
-#. TRANSLATION: libretro/mesens, libretro/mesen, libretro/fceumm, amiberry
+#. TRANSLATION: libretro/mesens, libretro/mesen, libretro/fceumm, amiberry, mupen64plus
 msgctxt "game_options"
 msgid "Low"
 msgstr "Faible"
 
-#. TRANSLATION: libretro/mesens, libretro/mesen
+#. TRANSLATION: libretro/mesens, libretro/mesen, mupen64plus
 msgctxt "game_options"
 msgid "Medium"
 msgstr "Moyen"
 
-#. TRANSLATION: libretro/mesens, libretro/mesen, libretro/fceumm, amiberry
+#. TRANSLATION: libretro/mesens, libretro/mesen, libretro/fceumm, amiberry, mupen64plus
 msgctxt "game_options"
 msgid "High"
 msgstr "Elevé"
 
-#. TRANSLATION: libretro/mesens, libretro/mesen, libretro/fceumm
+#. TRANSLATION: libretro/mesens, libretro/mesen, libretro/fceumm, mupen64plus
 msgctxt "game_options"
 msgid "Very High"
 msgstr "Très élevé"
@@ -7034,6 +7034,18 @@ msgstr "SDL"
 msgctxt "game_options"
 msgid "FRAMESKIP (GL64MK2 ONLY)"
 msgstr "FRAMESKIP (GL64MK2 UNIQUEMENT)"
+
+#. TRANSLATION: mupen64plus
+msgctxt "game_options"
+msgid ""
+"Lower values reduce audio latency and improve performance, but can cause "
+"audio issues."
+msgstr ""
+
+#. TRANSLATION: mupen64plus
+msgctxt "game_options"
+msgid "AUDIO BUFFER (SAMPLES)"
+msgstr ""
 
 #. TRANSLATION: mupen64plus
 msgctxt "game_options"
