--- a/package/batocera/emulationstation/batocera-es-system/locales/nl/batocera-es-system.po
+++ b/package/batocera/emulationstation/batocera-es-system/locales/nl/batocera-es-system.po
@@ -531,22 +531,22 @@ msgctxt "game_options"
 msgid "OVERCLOCK (UNSTABLE)"
 msgstr "OVERCLOCK (ONSTABIEL)"
 
-#. TRANSLATION: libretro/mesens, libretro/mesen, libretro/fceumm, amiberry
+#. TRANSLATION: libretro/mesens, libretro/mesen, libretro/fceumm, amiberry, mupen64plus
 msgctxt "game_options"
 msgid "Low"
 msgstr "Laag"
 
-#. TRANSLATION: libretro/mesens, libretro/mesen
+#. TRANSLATION: libretro/mesens, libretro/mesen, mupen64plus
 msgctxt "game_options"
 msgid "Medium"
 msgstr "Gemiddeld"
 
-#. TRANSLATION: libretro/mesens, libretro/mesen, libretro/fceumm, amiberry
+#. TRANSLATION: libretro/mesens, libretro/mesen, libretro/fceumm, amiberry, mupen64plus
 msgctxt "game_options"
 msgid "High"
 msgstr "Hoog"
 
-#. TRANSLATION: libretro/mesens, libretro/mesen, libretro/fceumm
+#. TRANSLATION: libretro/mesens, libretro/mesen, libretro/fceumm, mupen64plus
 msgctxt "game_options"
 msgid "Very High"
 msgstr "Erg Hoog"
@@ -6997,6 +6997,18 @@ msgstr ""
 msgctxt "game_options"
 msgid "FRAMESKIP (GL64MK2 ONLY)"
 msgstr "FRAMESKIP (ALLEEN GL64MK2)"
+
+#. TRANSLATION: mupen64plus
+msgctxt "game_options"
+msgid ""
+"Lower values reduce audio latency and improve performance, but can cause "
+"audio issues."
+msgstr ""
+
+#. TRANSLATION: mupen64plus
+msgctxt "game_options"
+msgid "AUDIO BUFFER (SAMPLES)"
+msgstr ""
 
 #. TRANSLATION: mupen64plus
 msgctxt "game_options"
