--- a/package/batocera/emulationstation/batocera-es-system/locales/fr/batocera-es-system.po
+++ b/package/batocera/emulationstation/batocera-es-system/locales/fr/batocera-es-system.po
@@ -4168,12 +4168,12 @@ msgctxt "game_options"
 msgid "More compatible"
 msgstr "Plus de compatibilité"
 
-#. TRANSLATION: libretro/puae, libretro/puae2021
+#. TRANSLATION: libretro/puae
 msgctxt "game_options"
 msgid "Cycle-exact (DMA/Memory)"
 msgstr ""
 
-#. TRANSLATION: libretro/puae, libretro/puae2021
+#. TRANSLATION: libretro/puae
 msgctxt "game_options"
 msgid "Cycle-exact (Full)"
 msgstr ""
@@ -4449,6 +4449,11 @@ msgid "Inserts CD during boot animation prevent loading fail."
 msgstr ""
 "L'insertion du CD pendant l'animation de démarrage empêche l'échec du "
 "chargement."
+
+#. TRANSLATION: libretro/puae2021
+msgctxt "game_options"
+msgid "Cycle-exact"
+msgstr "Cycle-exact"
 
 #. TRANSLATION: libretro/px68k, libretro/quasi88
 msgctxt "game_options"
@@ -8659,10 +8664,6 @@ msgstr ""
 #~ msgstr ""
 #~ "Utiliser les mêmes chemins d'images que l'émulateur mame - non recommandé "
 #~ "en cas d'utilisation de décoration ou shaders."
-
-#~ msgctxt "game_options"
-#~ msgid "Cycle-exact"
-#~ msgstr "Cycle-exact"
 
 #~ msgctxt "game_options"
 #~ msgid ""
