--- a/package/batocera/emulationstation/batocera-es-system/locales/nl/batocera-es-system.po
+++ b/package/batocera/emulationstation/batocera-es-system/locales/nl/batocera-es-system.po
@@ -4147,12 +4147,12 @@ msgctxt "game_options"
 msgid "More compatible"
 msgstr "Meer compatibel"
 
-#. TRANSLATION: libretro/puae, libretro/puae2021
+#. TRANSLATION: libretro/puae
 msgctxt "game_options"
 msgid "Cycle-exact (DMA/Memory)"
 msgstr ""
 
-#. TRANSLATION: libretro/puae, libretro/puae2021
+#. TRANSLATION: libretro/puae
 msgctxt "game_options"
 msgid "Cycle-exact (Full)"
 msgstr ""
@@ -4423,6 +4423,11 @@ msgstr "Zorgt dat de blauwe knop wijzigt naar omhoog drukken."
 msgctxt "game_options"
 msgid "Inserts CD during boot animation prevent loading fail."
 msgstr "Voert CD in gedurende boot animatie voorkom laadfouten."
+
+#. TRANSLATION: libretro/puae2021
+msgctxt "game_options"
+msgid "Cycle-exact"
+msgstr "Cycle-exact"
 
 #. TRANSLATION: libretro/px68k, libretro/quasi88
 msgctxt "game_options"
@@ -8586,10 +8591,6 @@ msgstr ""
 msgctxt "game_options"
 msgid "EGA GRAPHICS MODE"
 msgstr ""
-
-#~ msgctxt "game_options"
-#~ msgid "Cycle-exact"
-#~ msgstr "Cycle-exact"
 
 #~ msgctxt "game_options"
 #~ msgid ""
